--- a/views/allproducts.ejs
+++ b/views/allproducts.ejs
@@ -10,7 +10,8 @@
     <h1>All Products</h1>
     <ul>
     <% for(product of products) {%>
-        <li><a href=""> <%= product.title %> </a></li>
+        <li><a href="/product/<%= product._id %>"> <%= product.title %> </a></li>
+        
         <% } %>
     </ul>
 </body>
