--- a/views/products/singleProduct.ejs
+++ b/views/products/singleProduct.ejs
@@ -1,3 +1,10 @@
 <% layout('layouts/boilerplate') %>
     <h1><%= product.title %></h1>
     <%= product.description %>
+
+    <a href="/products">All Products</a>
+    <a href="/products/<%= product._id  %>/edit">Edit Product</a>
+    
+    <form action="/products/<%= product._id %>/del?_method=DELETE" method="POST">
+        <button type="submit">Delete</button>
+    </form>
