--- a/views/products/allproducts.ejs
+++ b/views/products/allproducts.ejs
@@ -1,10 +1,26 @@
 <% layout('layouts/boilerplate') %>
     <h1>All Products</h1>
-    <ul>
-    <% for(product of products) {%>
-        <li><a href="/products/<%= product._id %>"> <%= product.title %> </a></li>
-        
-        <% } %>
-    </ul>
+        <% for(product of products) {%>
+            <% let s = product.productType %>
+            <% s = s[0].toUpperCase() + s.slice(1);%>
+            
 
-    <a href="/products/new">Add New Product</a>
+        <div class="card" mb-3>
+            <div class="row">
+                <div class="col-md-4">
+                    <img class="image-fluid" src=<%= product.image %> alt="" style="width:380px;height:375px;">
+                </div>
+                <div class="col-md-8">
+                    <div class="card-body">
+                        <h5 class="card-title"><%=product.title %> -- <%= s  %></h5>
+                        <p class="card-text">$<%= product.price %></p>
+                        <p class="card-text"><small class="text-muted"><%= product.description %></small></p>
+                        <a class="btn btn-primary" href="/products/<%= product._id %>">View</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <% } %>
+
+            <a href="/products/new">Add New Product</a>
