--- a/views/products/singleProduct.ejs
+++ b/views/products/singleProduct.ejs
@@ -1,10 +1,27 @@
 <% layout('layouts/boilerplate') %>
-    <h1><%= product.title %></h1>
-    <%= product.description %>
 
-    <a href="/products">All Products</a>
-    <a href="/products/<%= product._id  %>/edit">Edit Product</a>
-    
-    <form action="/products/<%= product._id %>/del?_method=DELETE" method="POST">
-        <button type="submit">Delete</button>
-    </form>
+<% let s = product.productType %>
+<% s = s[0].toUpperCase() + s.slice(1);%>
+
+<div class="row col-6 offset-3">
+    <div class="card" style="width: 40rem;">
+        <img class="card-img-top" src=<%= product.image %> alt="Card image cap">
+        <div class="card-body">
+          <h5 class="card-title"><%= product.title %></h5>
+          <p class="card-text text-muted"><%= product.description %></p>
+        </div>
+        <ul class="list-group list-group-flush">
+          <li class="list-group-item">$<%= product.price %></li>
+          <li class="list-group-item"><%= s %></li>
+          
+        </ul>
+        <div class="card-body">
+          <a href="/products/<%= product._id  %>/edit" class="card-link btn btn-info">Edit</a>
+          <form class="d-inline" action="/products/<%= product._id %>/del?_method=DELETE" method="POST">
+            <button class="btn btn-danger"type="submit">Delete</button>
+        </form>
+        </div>
+      </div>
+</div>
+
+  
