--- a/views/products/newProduct.ejs
+++ b/views/products/newProduct.ejs
@@ -58,6 +58,9 @@
                     <label class="form-label" for="description">Description:</label>
                     <textarea class="form-control" name="product[description]" id="description" cols="30"
                         rows="5" required></textarea>
+                        <div class="valid-feedback">
+                            Looks good!
+                          </div>
                 </div>
 
                 <div class="mb-3"><button class="btn btn-success" type="submit">Submit</button></div>
@@ -71,23 +74,4 @@
     </div>
 
 
-    <script>
-        (() => {
-  'use strict'
-
-  // Fetch all the forms we want to apply custom Bootstrap validation styles to
-  const forms = document.querySelectorAll('.needs-validation')
-
-  // Loop over them and prevent submission
-  Array.from(forms).forEach(form => {
-    form.addEventListener('submit', event => {
-      if (!form.checkValidity()) {
-        event.preventDefault()
-        event.stopPropagation()
-      }
-
-      form.classList.add('was-validated')
-    }, false)
-  })
-})()
-    </script>
+ 
