--- a/views/products/singleProduct.ejs
+++ b/views/products/singleProduct.ejs
@@ -5,7 +5,7 @@
 
 <div class="row col-6 offset-3">
     <div class="card" style="width: 40rem;">
-        <img class="card-img-top" src=<%= product.image %> alt="Card image cap">
+        <img class="card-img-top img-fluid" src=<%= product.image %> alt="Card image cap">
         <div class="card-body">
           <h5 class="card-title"><%= product.title %></h5>
           <p class="card-text text-muted"><%= product.description %></p>
