fix padding of card(img of product) in singleProduct.ejs

--- a/views/products/singleProduct.ejs
+++ b/views/products/singleProduct.ejs
@@ -4,7 +4,7 @@
 <% s = s[0].toUpperCase() + s.slice(1);%>
 
 <div class="row col-6 offset-3">
-    <div class="card" style="width: 40rem;">
+    <div class="card" style="width: 40rem; padding: 0 0">
         <img class="card-img-top img-fluid" src=<%= product.image %> alt="Card image cap">
         <div class="card-body">
           <h5 class="card-title"><%= product.title %></h5>
