--- a/views/products/singleProduct.ejs
+++ b/views/products/singleProduct.ejs
@@ -30,14 +30,20 @@
           </div>
         </div>
         <h2 class="mb-3 mt-3">Leave a Review</h2>
-        <form action="">
+        <form class="mb-3 needs-validation" action="/products/<%= product._id %>/reviews" method="POST" novalidate>
           <div class="mb-3 mt-3">
             <label class="form-label" for="rating">Rating</label>
-            <input class="form-range" type="range" min="1" max="5" name="review[rating]" id="rating">
+            <input class="form-range" type="range" min="1" max="5" name="review[rating]" id="rating" required>
+            <div class="valid-feedback">
+              Looks good!
+            </div>
         </div>
           <div class="mb-3 mt-3">
               <label class="form-label" for="body">Review</label>
-              <textarea class="form-control" name="review[body]" id="body" cols="30" rows="5"></textarea>
+              <textarea class="form-control" name="review[body]" id="body" cols="30" rows="5" required></textarea>
+              <div class="valid-feedback">
+                Looks good!
+              </div>
           </div>
           <button class="btn btn-success" type="submit">Submit</button>
         </form>
