--- a/views/products/singleProduct.ejs
+++ b/views/products/singleProduct.ejs
@@ -47,4 +47,10 @@
           </div>
           <button class="btn btn-success" type="submit">Submit</button>
         </form>
+        <% for(review of product.reviews) {%>
+        <div class="mb-3">
+          <p>Rating: <%= review.rating %></p>
+          <p>Review: <%= review.body %></p>
+        </div>
+        <% } %>
       </div>
