removing reviews from product collection upon deleting from review collection from delete button

--- a/views/products/singleProduct.ejs
+++ b/views/products/singleProduct.ejs
@@ -3,54 +3,69 @@
   <% let s=product.productType %>
     <% s=s[0].toUpperCase() + s.slice(1);%>
 
-      <div class="row col-6 offset-3">
-        <div class="card" style="width: 40rem; padding: 0 0">
-          <img class="card-img-top img-fluid" src=<%=product.image %> alt="Card image cap">
-          <div class="card-body">
-            <h5 class="card-title">
-              <%= product.title %>
-            </h5>
-            <p class="card-text text-muted">
-              <%= product.description %>
-            </p>
-          </div>
-          <ul class="list-group list-group-flush">
-            <li class="list-group-item">$<%= product.price %>
-            </li>
-            <li class="list-group-item">
-              <%= s %>
-            </li>
-
-          </ul>
-          <div class="card-body">
-            <a href="/products/<%= product._id  %>/edit" class="card-link btn btn-info">Edit</a>
-            <form class="d-inline" action="/products/<%= product._id %>/del?_method=DELETE" method="POST">
-              <button class="btn btn-danger" type="submit">Delete</button>
-            </form>
-          </div>
-        </div>
-        <h2 class="mb-3 mt-3">Leave a Review</h2>
-        <form class="mb-3 needs-validation" action="/products/<%= product._id %>/reviews" method="POST" novalidate>
-          <div class="mb-3 mt-3">
-            <label class="form-label" for="rating">Rating</label>
-            <input class="form-range" type="range" min="1" max="5" name="review[rating]" id="rating" required>
-            <div class="valid-feedback">
-              Looks good!
+      <div class="row">
+        <div class="col-6 mb-3">
+          <div class="card" style="width: 40rem; padding: 0 0">
+            <img class="card-img-top img-fluid" src=<%=product.image %> alt="Card image cap">
+            <div class="card-body">
+              <h5 class="card-title">
+                <%= product.title %>
+              </h5>
+              <p class="card-text text-muted">
+                <%= product.description %>
+              </p>
             </div>
+            <ul class="list-group list-group-flush">
+              <li class="list-group-item">$<%= product.price %>
+              </li>
+              <li class="list-group-item">
+                <%= s %>
+              </li>
+
+            </ul>
+            <div class="card-body">
+              <a href="/products/<%= product._id  %>/edit" class="card-link btn btn-info">Edit</a>
+              <form class="d-inline" action="/products/<%= product._id %>/del?_method=DELETE" method="POST">
+                <button class="btn btn-danger" type="submit">Delete</button>
+              </form>
+            </div>
+          </div>
         </div>
-          <div class="mb-3 mt-3">
+        <div class="col-6">
+          <h2 class="mb-3 mt-3">Leave a Review</h2>
+          <form class="mb-3 needs-validation" action="/products/<%= product._id %>/reviews" method="POST" novalidate>
+            <div class="mb-3 mt-3">
+              <label class="form-label" for="rating">Rating</label>
+              <input class="form-range" type="range" min="1" max="5" name="review[rating]" id="rating" required>
+              <div class="valid-feedback">
+                Looks good!
+              </div>
+            </div>
+            <div class="mb-3 mt-3">
               <label class="form-label" for="body">Review</label>
               <textarea class="form-control" name="review[body]" id="body" cols="30" rows="5" required></textarea>
               <div class="valid-feedback">
                 Looks good!
               </div>
-          </div>
-          <button class="btn btn-success" type="submit">Submit</button>
-        </form>
-        <% for(review of product.reviews) {%>
-        <div class="mb-3">
-          <p>Rating: <%= review.rating %></p>
-          <p>Review: <%= review.body %></p>
+            </div>
+            <button class="btn btn-success" type="submit">Submit</button>
+          </form>
+          <% for(review of product.reviews) {%>
+            <div class="card mb-3">
+              <div class="card-body">
+                <h5 class="card-title">
+                  Rating: <%= review.rating %>
+                </h5>
+                <p class="card-text text-muted">
+                  Review: <%= review.body %>
+                </p>
+                <form action="/products/<%= product._id %>/reviews/<%= review._id %>?_method=DELETE" method="post">
+                  <button class="btn btn-sm btn-danger" type="submit">Delete</button>
+                </form>
+              </div>
+            </div>
+  
+            <% } %>
         </div>
-        <% } %>
+  
       </div>
